--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,44 @@
-.App {
-  text-align: center;
+body {
+    background-color: #f5fffa;
+    font-family: "Roboto", sans-serif;
+    min-height: 100vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+    background-color:#1a1a1a;
+    width: 100%;
+    height: 100px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-brand{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    margin: auto;
+
 }
 
-.App-link {
-  color: #61dafb;
+.footer {
+    position: relative;
+    background-color: #1a1a1a;
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+    padding: 15px;
+    color: #f5fffa;
+    text-align: center;
+    font-size: 18px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer a {
+    color: #f5fffa;
+    text-decoration: none;
+}
+
+@media (max-width:800px) {
+    .navbar {
+        width: 100%;
+    }
+
 }
