--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ body {
     background-color: #f5fffa;
     font-family: "Roboto", sans-serif;
     min-height: 100vh;
+    position: relative;
+    padding-bottom: 100px;
 }
 
 .navbar {
@@ -20,11 +22,12 @@ body {
 }
 
 .footer {
-    position: relative;
+    position: absolute;
     background-color: #1a1a1a;
     width: 100%;
     height: 100px;
     bottom: 0;
+    left: 0;
     padding: 15px;
     color: #f5fffa;
     text-align: center;
@@ -37,6 +40,10 @@ body {
 }
 
 @media (max-width:800px) {
+    body {
+        min-height: 100vh;
+    }
+    
     .navbar {
         width: 100%;
     }
