--- a/src/containers/LandingPage/LandingPage.css
+++ b/src/containers/LandingPage/LandingPage.css
@@ -1,6 +1,6 @@
 .landingpage {
     width: 100%; 
-    height: 100vh; 
+    min-height: 100vh; 
     left: 0px; 
     top: 0px;
     background-size: cover;
